# research-digest

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
research_digest/: __init__.py  __main__.py  arxiv_client.py  cli.py  digest.py  rss_client.py  summarizer.py  web_search.py
scripts/: health_check.py  rotate_digests.py  rotate_reports.py  run_phase2.py  search_arxiv.py
tests/: test_arxiv_client.py  test_cli.py  test_digest.py  test_health_check.py  test_rotate_digests.py  test_rotate_reports.py  test_rss_client.py  test_web_search.py
